<resources>
    <string name="app_name">Evaluation06_Starter</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="aqi">AQI</string>
    <string name="co">Carbon monoxide (CO) </string>
    <string name="no">Nitrogen monoxide (NO)</string>
    <string name="no2">Nitrogen dioxide (No2)</string>
    <string name="o3">Ozone (O3)</string>
    <string name="so2">Sulphur dioxide (so2)</string>
    <string name="na">N/A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cityStr">City</string>
    <string name="aqiStr">AQI</string>
</resources>